feat: Conclude user module
