# src/docs/swagger.yaml
@@ -1,6 +1,19 @@
 basePath: /api/v1
 definitions:
-  core.Expense:
+  expenses.ExpenseInput:
+    properties:
+      amount:
+        type: number
+      category:
+        type: string
+      date:
+        type: string
+      description:
+        type: string
+      type:
+        type: integer
+    type: object
+  github_com_eduardo-paes_cashflow_core_expenses.Expense:
     properties:
       amount:
         type: number
@@ -19,7 +32,7 @@ definitions:
       type:
         type: integer
     type: object
-  core.User:
+  github_com_eduardo-paes_cashflow_core_users.User:
     properties:
       createdAt:
         type: string
@@ -33,15 +46,17 @@ definitions:
         type: string
       password:
         type: string
+      updatedAt:
+        type: string
     type: object
-  ports.AuthInput:
+  users.AuthInput:
     properties:
       email:
         type: string
       password:
         type: string
     type: object
-  ports.AuthOutput:
+  users.AuthOutput:
     properties:
       token:
         type: string
@@ -50,20 +65,7 @@ definitions:
       userName:
         type: string
     type: object
-  ports.ExpenseInput:
-    properties:
-      amount:
-        type: number
-      category:
-        type: string
-      date:
-        type: string
-      description:
-        type: string
-      type:
-        type: integer
-    type: object
-  ports.UserInput:
+  users.UserInput:
     properties:
       email:
         type: string
@@ -85,6 +87,36 @@ info:
   title: CashFlow API
   version: "1.0"
 paths:
+  /auth/login:
+    post:
+      consumes:
+      - application/json
+      description: Login with user credentials
+      parameters:
+      - description: User data
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/users.AuthInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/users.AuthOutput'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Login
+      tags:
+      - auth
   /expense:
     get:
       consumes:
@@ -110,7 +142,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/core.Expense'
+              $ref: '#/definitions/github_com_eduardo-paes_cashflow_core_expenses.Expense'
             type: array
         "400":
           description: Bad Request
@@ -133,14 +165,14 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/ports.ExpenseInput'
+          $ref: '#/definitions/expenses.ExpenseInput'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/core.Expense'
+            $ref: '#/definitions/github_com_eduardo-paes_cashflow_core_expenses.Expense'
         "400":
           description: Bad Request
           schema:
@@ -169,7 +201,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/core.Expense'
+            $ref: '#/definitions/github_com_eduardo-paes_cashflow_core_expenses.Expense'
         "400":
           description: Bad Request
           schema:
@@ -196,14 +228,14 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/ports.ExpenseInput'
+          $ref: '#/definitions/expenses.ExpenseInput'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/core.Expense'
+            $ref: '#/definitions/github_com_eduardo-paes_cashflow_core_expenses.Expense'
         "400":
           description: Bad Request
           schema:
@@ -215,36 +247,6 @@ paths:
       summary: Update an expense by ID
       tags:
       - expenses
-  /login:
-    post:
-      consumes:
-      - application/json
-      description: Login with user credentials
-      parameters:
-      - description: User data
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/ports.AuthInput'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/ports.AuthOutput'
-        "400":
-          description: Bad Request
-          schema:
-            type: string
-        "500":
-          description: Internal Server Error
-          schema:
-            type: string
-      summary: Login
-      tags:
-      - auth
   /swagger/{anything}:
     get:
       description: Swagger UI endpoint
@@ -254,19 +256,12 @@ paths:
     get:
       consumes:
       - application/json
-      description: Get one or multiple users based on provided parameters
+      description: Get one user
       parameters:
       - description: User ID
-        in: query
+        in: path
         name: id
-        type: integer
-      - description: Number of items to skip
-        in: query
-        name: skip
-        type: integer
-      - description: Number of items to take
-        in: query
-        name: take
+        required: true
         type: integer
       produces:
       - application/json
@@ -275,7 +270,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/core.User'
+              $ref: '#/definitions/github_com_eduardo-paes_cashflow_core_users.User'
             type: array
         "400":
           description: Bad Request
@@ -285,7 +280,7 @@ paths:
           description: Internal Server Error
           schema:
             type: string
-      summary: Get one or multiple users
+      summary: Get one user
       tags:
       - users
     post:
@@ -298,14 +293,14 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/ports.UserInput'
+          $ref: '#/definitions/users.UserInput'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/core.User'
+            $ref: '#/definitions/github_com_eduardo-paes_cashflow_core_users.User'
         "400":
           description: Bad Request
           schema:
@@ -334,7 +329,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/core.User'
+            $ref: '#/definitions/github_com_eduardo-paes_cashflow_core_users.User'
         "400":
           description: Bad Request
           schema:
@@ -361,14 +356,14 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/ports.UserInput'
+          $ref: '#/definitions/users.UserInput'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/core.User'
+            $ref: '#/definitions/github_com_eduardo-paes_cashflow_core_users.User'
         "400":
           description: Bad Request
           schema:
